nested/mcs.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "MCSModules": {
            "type": "object"
        },
        "networkSettings": {
            "type": "object"
        },
        "apiVersions": {
            "type": "object"
        },
        "DNSServerAddress": {
            "type": "array"
        }
    },
    "variables": {
        "vnetId": "[resourceId('Microsoft.Network/virtualNetworks', parameters('networkSettings').virtualNetworkName)]",
        "subnetRef": "[concat(variables('vnetId'), '/subnets/', parameters('networkSettings').subnet3Name)]",
        "subnetRef1": "[concat(variables('vnetId'), '/subnets/', parameters('networkSettings').subnet2Name)]"
    },
    "resources": [
        {
            "type": "Microsoft.Storage/storageAccounts",
            "name": "[parameters('MCSModules').adstorageAccountName]",
            "apiVersion": "[parameters('apiVersions').storageApiVersion]",
            "location": "[parameters('MCSModules').location]",
            "sku": {
                "name": "Standard_LRS"
            },
            "kind": "Storage",
            "properties": {}
        },
        {
            "apiVersion": "[parameters('apiVersions').networkApiVersion]",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('MCSModules').publicIPAddressNameTrendDSM]",
            "location": "[parameters('MCSModules').location]",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "dnsSettings": {
                    "domainNameLabel": "[parameters('MCSModules').publicIPDomainNameLabelTrendDSM]"
                }
            }
        },
        {
            "apiVersion": "[parameters('apiVersions').networkApiVersion]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('MCSModules').securityGroupNameTrendDSM]",
            "location": "[parameters('MCSModules').location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "allow-inbound-ssh",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-inbound-dsmportal",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "[parameters('MCSModules').managerPortTrendDSM]",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-inbound-dsmagent",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "4118",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1200,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-inbound-dsmheartbeat",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "[parameters('MCSModules').heartbeatPortTrendDSM]",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1300,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-inbound-dsmdownload",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "4122",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1400,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-inbound-dsmwebinstaller",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1500,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "[parameters('apiVersions').networkApiVersion]",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('MCSModules').nicNameTrendDSM]",
            "location": "[parameters('MCSModules').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/publicIPAddresses/', parameters('MCSModules').publicIPAddressNameTrendDSM)]",
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('MCSModules').securityGroupNameTrendDSM)]"
            ],
            "properties": {
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('MCSModules').securityGroupNameTrendDSM)]"
                },
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses',parameters('MCSModules').publicIPAddressNameTrendDSM)]"
                            },
                            "subnet": {
                                "id": "[variables('subnetRef1')]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "buildSQLServer",
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "[parameters('apiVersions').deploymentApiVersion]",
            "dependsOn": [],
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri": "[parameters('MCSModules').azuresqlUrl]",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": {
                    "location": {
                        "value": "[parameters('MCSModules').location]"
                    },
                    "newsqlServerName": {
                        "value": "[parameters('MCSModules').newsqlServerName]"
                    },
                    "dbAdminName": {
                        "value": "[parameters('MCSModules').dbAdminName]"
                    },
                    "dbAdminPassword": {
                        "value": "[parameters('MCSModules').dbAdminPassword]"
                    },
                    "sqlDBName": {
                        "value": "[parameters('MCSModules').dbName]"
                    }
                }
            }
        },
        {
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('MCSModules').vmNameTrendDSM]",
            "location": "[parameters('MCSModules').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', parameters('MCSModules').nicNameTrendDSM)]",
                "[concat('Microsoft.Resources/deployments/', 'buildSQLServer')]"
            ],
            "plan": {
                "publisher": "[parameters('MCSModules').trendPublisher]",
                "product": "[parameters('MCSModules').trendProduct]",
                "name": "[parameters('MCSModules').trendVMSku]"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('MCSModules').trendVMSize]"
                },
                "osProfile": {
                    "computerName": "[parameters('MCSModules').vmNameTrendDSM]",
                    "adminUsername": "[parameters('MCSModules').vmAdminNameTrendDSM]",
                    "adminPassword": "[parameters('MCSModules').vmAdminPasswordTrendDSM]",
                    "customData": "[base64(concat('vmName:',base64(parameters('MCSModules').vmNameTrendDSM),',databaseServer:',reference('buildSQLServer').outputs.sqlServerFQDN.value,',databaseName:',base64(parameters('MCSModules').dbName),',location:',parameters('MCSModules').location,',managerPort:',parameters('MCSModules').managerPortTrendDSM,',heartbeatPort:',parameters('MCSModules').heartbeatPortTrendDSM,',vmFQDN:',reference(resourceId('Microsoft.Network/publicIPAddresses',parameters('MCSMo [...]
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[parameters('MCSModules').trendPublisher]",
                        "offer": "[parameters('MCSModules').trendProduct]",
                        "sku": "[parameters('MCSModules').trendVMSku]",
                        "version": "2.0.0"
                    },
                    "osDisk": {
                        "createOption": "FromImage",
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS"
                        }
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces',parameters('MCSModules').nicNameTrendDSM)]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": "true",
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', parameters('MCSModules').adstorageAccountName)).primaryEndpoints.blob]"
                    }
                }
            }
        },
        {
            "name": "[parameters('MCSModules').adNetworkSecurityGroupName]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "[parameters('apiVersions').networkApiVersion]",
            "location": "[parameters('MCSModules').location]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/', parameters('MCSModules').vmNameTrendDSM)]"
            ],
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-rdp",
                        "properties": {
                            "priority": 1000,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "3389",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('MCSModules').adNicName]",
            "apiVersion": "[parameters('apiVersions').networkApiVersion]",
            "location": "[parameters('MCSModules').location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('MCSModules').adNetworkSecurityGroupName)]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Static",
                            "privateIPAddress": "[parameters('MCSModules').adNicIPAddress]",
                            "subnet": {
                                "id": "[variables('subnetRef')]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups',parameters('MCSModules').adNetworkSecurityGroupName)]"
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('MCSModules').adVMName]",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "location": "[parameters('MCSModules').location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('MCSModules').adNicName)]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('MCSModules').adstorageAccountName)]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('MCSModules').VMSize]"
                },
                "osProfile": {
                    "computerName": "[parameters('MCSModules').adVMName]",
                    "adminUsername": "[parameters('MCSModules').Username]",
                    "adminPassword": "[parameters('MCSModules').Password]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[parameters('MCSModules').publisher]",
                        "offer": "[parameters('MCSModules').offer]",
                        "sku": "[parameters('MCSModules').sku]",
                        "version": "[parameters('MCSModules').version]"
                    },
                    "osDisk": {
                        "createOption": "FromImage",
                        "managedDisk": {
                            "storageAccountType": "[parameters('MCSModules').storageAccountType]"
                        }
                    },
                    "dataDisks": [
                        {
                            "diskSizeGB": "1023",
                            "lun": 0,
                            "createOption": "Empty"
                        }
                    ]
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('MCSModules').adNicName)]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": "true",
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', parameters('MCSModules').adstorageAccountName)).primaryEndpoints.blob]"
                    }
                }
            },
            "resources": [
                {
                    "type": "extensions",
                    "name": "CreateADForest",
                    "apiVersion": "[parameters('apiVersions').computeApiVersion]",
                    "location": "[parameters('MCSModules').location]",
                    "dependsOn": [
                        "[resourceId('Microsoft.Compute/virtualMachines', parameters('MCSModules').adVMName)]"
                    ],
                    "properties": {
                        "publisher": "Microsoft.Powershell",
                        "type": "DSC",
                        "typeHandlerVersion": "2.19",
                        "autoUpgradeMinorVersion": true,
                        "settings": {
                            "ModulesUrl": "[concat(parameters('MCSModules').dscScriptUrl, '/DSC/CreateADPDC.zip')]",
                            "ConfigurationFunction": "CreateADPDC.ps1\\CreateADPDC",
                            "Properties": {
                                "DomainName": "[parameters('MCSModules').domainName]",
                                "AdminCreds": {
                                    "UserName": "[parameters('MCSModules').Username]",
                                    "Password": "PrivateSettingsRef:AdminPassword"
                                }
                            }
                        },
                        "protectedSettings": {
                            "Items": {
                                "AdminPassword": "[parameters('MCSModules').Password]"
                            }
                        }
                    }
                }
            ]
        },
        
        {
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('networkSettings').virtualNetworkName]",
            "apiVersion": "[parameters('apiVersions').networkApiVersion]",
            "location": "[parameters('networkSettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/', parameters('MCSModules').adVMName,'/extensions/CreateADForest')]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('networkSettings').addressPrefix]"
                    ]
                },
                "dhcpOptions": {
                    "dnsServers": "[parameters('DNSServerAddress')]"
                },
                "subnets": [
                    {
                        "name": "[parameters('networkSettings').subnet1Name]",
                        "properties": {
                            "addressPrefix": "[parameters('networkSettings').subnet1Prefix]"
                        }
                    },
                    {
                        "name": "[parameters('networkSettings').subnet2Name]",
                        "properties": {
                            "addressPrefix": "[parameters('networkSettings').subnet2Prefix]"
                        }
                    },
                    {
                        "name": "[parameters('networkSettings').subnet3Name]",
                        "properties": {
                            "addressPrefix": "[parameters('networkSettings').subnet3Prefix]"
                        }
                    },
                    {
                        "name": "[parameters('networkSettings').subnet4Name]",
                        "properties": {
                            "addressPrefix": "[parameters('networkSettings').subnet4Prefix]"
                        }
                    },
                    {
                        "name": "[parameters('networkSettings').subnet5Name]",
                        "properties": {
                            "addressPrefix": "[parameters('networkSettings').subnet5Prefix]"
                        }
                    },
                    {
                        "name": "[parameters('networkSettings').subnet6Name]",
                        "properties": {
                            "addressPrefix": "[parameters('networkSettings').subnet6Prefix]"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "[parameters('apiVersions').networkApiVersion]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('MCSModules').splunkNsg]",
            "location": "[parameters('MCSModules').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/virtualNetworks/', parameters('networkSettings').virtualNetworkName)]"
            ],
            "properties": {
                "securityRules": [
                    {
                        "name": "Allow-SSH",
                        "properties": {
                            "description": "Allows SSH traffic",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "[parameters('MCSModules').sshFrom]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Allow-HTTP",
                        "properties": {
                            "description": "Allows HTTP traffic on port 8000",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8000",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Allow-HTTPS",
                        "properties": {
                            "description": "Allows HTTPS traffic on port 443",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Allow-HTTP-Event-Collector",
                        "properties": {
                            "description": "Allows HTTP(S) Event Collector traffic on port 8088",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8088",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 130,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Allow-Receiver-TCP",
                        "properties": {
                            "description": "Allows receiver TCP traffic on port 9997",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "9997",
                            "sourceAddressPrefix": "[parameters('MCSModules').forwardedDataFrom]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 140,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Allow-Mgmt-From-VNET",
                        "properties": {
                            "description": "Allows mgmt on port 8089 from VNET only",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8089",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 150,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "[parameters('apiVersions').networkApiVersion]",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('MCSModules').splunkNicName]",
            "location": "[parameters('MCSModules').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('MCSModules').splunkNsg)]"
            ],
            "properties": {
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('MCSModules').splunkNsg)]"
                },
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Static",
                            "privateIPAddress": "[parameters('MCSModules').splunkIPAddress]",
                            "subnet": {
                                "id": "[variables('subnetRef')]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('MCSModules').splunkVMName]",
            "location": "[parameters('MCSModules').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', parameters('MCSModules').splunkNicName)]"
            ],
            "plan": {
                "name": "[parameters('MCSModules').splunkImageSKU]",
                "product": "[parameters('MCSModules').splunkImageOffer]",
                "publisher": "[parameters('MCSModules').splunkImagePublisher]"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('MCSModules').VMSize]"
                },
                "osProfile": {
                    "computername": "[parameters('MCSModules').splunkVMName]",
                    "adminUsername": "[parameters('MCSModules').Username]",
                    "adminPassword": "[parameters('MCSModules').Password]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[parameters('MCSModules').splunkImagePublisher]",
                        "offer": "[parameters('MCSModules').splunkImageOffer]",
                        "sku": "[parameters('MCSModules').splunkImageSKU]",
                        "version": "[parameters('MCSModules').splunkImageVersion]"
                    },
                    "osDisk": {
                        "createOption": "FromImage",
                        "managedDisk": {
                            "storageAccountType": "[parameters('MCSModules').storageAccountType]"
                        }
                    },
                    "dataDisks": [
                        {
                            "diskSizeGB": "1023",
                            "lun": 0,
                            "createOption": "Empty"
                        }
                    ]
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('MCSModules').splunkNicName)]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": "true",
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', parameters('MCSModules').adstorageAccountName)).primaryEndpoints.blob]"
                    }
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(parameters('MCSModules').splunkVMName,'/', parameters('MCSModules').splunkExtensionName)]",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "location": "[parameters('MCSModules').location]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/', parameters('MCSModules').splunkVMName)]"
            ],
            "properties": {
                "publisher": "Microsoft.OSTCExtensions",
                "type": "CustomScriptForLinux",
                "typeHandlerVersion": "[parameters('MCSModules').typeHandlerVersion]",
                "settings": {
                    "fileUris": [
                        "[parameters('MCSModules').splunkScriptsUrl]"
                    ]
                },
                "protectedSettings": {
                    "commandToExecute": "[parameters('MCSModules').commandToExecute]"
                }
            }
        },
        {
            "name": "[parameters('MCSModules').wsNsg]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "[parameters('apiVersions').networkApiVersion]",
            "location": "[parameters('MCSModules').location]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/', parameters('MCSModules').splunkVMName,'/extensions/',parameters('MCSModules').splunkExtensionName)]"
            ],
            "properties": {
                "securityRules": [
                    {
                        "name": "https",
                        "properties": {
                            "priority": 100,
                            "sourceAddressPrefix": "*",
                            "protocol": "*",
                            "destinationPortRange": "443",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "http",
                        "properties": {
                            "priority": 101,
                            "sourceAddressPrefix": "*",
                            "protocol": "*",
                            "destinationPortRange": "80",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "winrm",
                        "properties": {
                            "priority": 102,
                            "sourceAddressPrefix": "*",
                            "protocol": "*",
                            "destinationPortRange": "5985",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "httpsout",
                        "properties": {
                            "priority": 1070,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "443",
                            "access": "Allow",
                            "direction": "Outbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "default-allow-rdp",
                        "properties": {
                            "priority": 1000,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "3389",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('MCSModules').wsNic]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "[parameters('apiVersions').networkApiVersion]",
            "location": "[parameters('MCSModules').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/',parameters('MCSModules').wsNsg)]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "subnet": {
                                "id": "[variables('subnetRef')]"
                            },
                            "privateIPAllocationMethod": "Static",
                            "privateIPAddress": "[parameters('MCSModules').wsIPAddress]"
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('MCSModules').wsNsg)]"
                }
            }
        },
        {
            "name": "[parameters('MCSModules').wsVmName]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "location": "[parameters('MCSModules').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', parameters('MCSModules').wsNic)]"
            ],
            "properties": {
                "osProfile": {
                    "computerName": "[parameters('MCSModules').wsVmName]",
                    "adminUsername": "[parameters('MCSModules').Username]",
                    "adminPassword": "[parameters('MCSModules').Password]",
                    "windowsConfiguration": {
                        "provisionVmAgent": true
                    }
                },
                "hardwareProfile": {
                    "vmSize": "[parameters('MCSModules').VMSize]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2012-R2-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "createOption": "fromImage",
                        "managedDisk": {
                            "storageAccountType": "[parameters('MCSModules').storageAccountType]"
                        }
                    },
                    "dataDisks": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('MCSModules').wsNic)]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": "true",
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', parameters('MCSModules').adstorageAccountName)).primaryEndpoints.blob]"
                    }
                }
            }
        },
        {
            "name": "[concat(parameters('MCSModules').wsVmName,'/CustomScriptExtension')]",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "location": "[parameters('MCSModules').location]",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/', parameters('MCSModules').wsVmName)]"
            ],
            "properties": {
                "publisher": "Microsoft.Compute",
                "type": "CustomScriptExtension",
                "typeHandlerVersion": "1.8",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "fileUris": [
                        "[parameters('MCSModules').workstationSetup]"
                    ]
                },
                "protectedSettings": {
                    "commandToExecute": "[concat('powershell.exe -File workstationsetup1.ps1')]"
                }
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('MCSModules').chefAutoNsg]",
            "apiVersion": "[parameters('apiVersions').networkApiVersion]",
            "location": "[parameters('MCSModules').location]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/', parameters('MCSModules').wsVmName,'/extensions/CustomScriptExtension')]"
            ],
            "properties": {
                "securityRules": [
                    {
                        "name": "ssh",
                        "properties": {
                            "priority": 1010,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "22",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "https",
                        "properties": {
                            "priority": 1020,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "443",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "git",
                        "properties": {
                            "priority": 1030,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "8989",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "httpsout",
                        "properties": {
                            "priority": 1050,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "443",
                            "access": "Allow",
                            "direction": "Outbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "udp",
                        "properties": {
                            "priority": 1040,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "8443",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('MCSModules').chefAutoNic]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "[parameters('apiVersions').networkApiVersion]",
            "location": "[parameters('MCSModules').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/',parameters('MCSModules').chefAutoNsg)]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "subnet": {
                                "id": "[variables('subnetRef')]"
                            },
                            "privateIPAllocationMethod": "Static",
                            "privateIPAddress": "[parameters('MCSModules').chefAutomateIPAddress]"
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('MCSModules').chefAutoNsg)]"
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('MCSModules').chefAutoVmName]",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "location": "[parameters('MCSModules').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', parameters('MCSModules').chefAutoNic)]"
            ],
            "plan": {
                "name": "[parameters('MCSModules').chefImageSKU]",
                "product": "[parameters('MCSModules').chefImageOffer]",
                "publisher": "[parameters('MCSModules').chefImagePublisher]"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('MCSModules').VMSize]"
                },
                "osProfile": {
                    "computerName": "[parameters('MCSModules').chefAutoVmName]",
                    "adminUsername": "[parameters('MCSModules').Username]",
                    "adminPassword": "[parameters('MCSModules').Password]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[parameters('MCSModules').chefImagePublisher]",
                        "offer": "[parameters('MCSModules').chefImageOffer]",
                        "sku": "[parameters('MCSModules').chefImageSKU]",
                        "version": "[parameters('MCSModules').chefImageVersion]"
                    },
                    "osDisk": {
                        "createOption": "FromImage",
                        "managedDisk": {
                            "storageAccountType": "[parameters('MCSModules').storageAccountType]"
                        }
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('MCSModules').chefAutoNic)]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": "true",
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', parameters('MCSModules').adstorageAccountName)).primaryEndpoints.blob]"
                    }
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(parameters('MCSModules').chefAutoVmName,'/automate_setup')]",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "location": "[parameters('MCSModules').location]",
            "properties": {
                "publisher": "Microsoft.Azure.Extensions",
                "type": "CustomScript",
                "typeHandlerVersion": "2.0",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "fileUris": [
                        "[parameters('MCSModules').chefAutoScriptUrl1]"
                    ],
                    "commandToExecute": "[concat(parameters('MCSModules').rubyPath, ' ./automate_setup.rb --fqdn \"', parameters('MCSModules').chefAutomateIPAddress, '\" --license \"',parameters('MCSModules').automateLicenseUri, '\"',' --adminUsername \"',parameters('MCSModules').Username,'\"',' --firstname ','\"',parameters('MCSModules').firstname,'\"',' --lastname ','\"',parameters('MCSModules').lastname,'\"',' --mailid ','\"',parameters('MCSModules').mailid,'\"',' --adminpassword ','\"',param [...]
                }
            },
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/', parameters('MCSModules').chefAutoVmName)]"
            ]
        },
        {
            "type": "Microsoft.Resources/deployments",
            "name": "workstation-extension",
            "apiVersion": "[parameters('apiVersions').deploymentApiVersion]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/', parameters('MCSModules').chefAutoVmName,'/extensions/automate_setup')]",
                "[concat('Microsoft.Compute/virtualMachines/', parameters('MCSModules').wsVmName,'/extensions/CustomScriptExtension')]"
            ],
            "properties": {
                "mode": "incremental",
                "templateLink": {
                    "uri": "[parameters('MCSModules').workstationextensionurl]",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": {
                    "wsVmName": {
                        "value": "[parameters('MCSModules').wsVmName]"
                    },
                    "location": {
                        "value": "[parameters('MCSModules').location]"
                    },
                    "adminUsername": {
                        "value": "[parameters('MCSModules').Username]"
                    },
                    "adminPassword": {
                        "value": "[parameters('MCSModules').Password]"
                    },
                    "computeApiVersion": {
                        "value": "[parameters('apiVersions').computeApiVersion]"
                    },
                    "orguser": {
                        "value": "[parameters('MCSModules').orguser]"
                    },
                    "workstationSetupUrl2": {
                        "value": "[parameters('MCSModules').workstationSetupUrl2]"
                    },
                    "chef-server-fqdn": {
                        "value": "[parameters('MCSModules').chefAutomateIPAddress]"
                    },
                    "splunkIP": {
                        "value": "[parameters('MCSModules').splunkIPAddress]"
                    }
                }
            }
        },
        {
            "type": "Microsoft.Resources/deployments",
            "name": "domainJoin",
            "apiVersion": "[parameters('apiVersions').deploymentApiVersion]",
            "dependsOn": [
                "[concat('Microsoft.Network/virtualNetworks/', parameters('networkSettings').virtualNetworkName)]",
                "workstation-extension"
            ],
            "properties": {
                "mode": "incremental",
                "templateLink": {
                    "uri": "[parameters('MCSModules').domainJoinUrl]",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": {
                    "wsVmName": {
                        "value": "[parameters('MCSModules').wsVmName]"
                    },
                    "scriptFileName": {
                        "value": "[parameters('MCSModules').scriptFileName]"
                    },
                    "domainName": {
                        "value": "[parameters('MCSModules').domainName]"
                    },
                    "Username": {
                        "value": "[parameters('MCSModules').Username]"
                    },
                    "Password": {
                        "value": "[parameters('MCSModules').Password]"
                    },
                    "fileUris": {
                        "value": "[parameters('MCSModules').fileUris]"
                    },
                    "computeApiVersion": {
                        "value": "[parameters('apiVersions').computeApiVersion]"
                    }
                }
            }
        },
        {
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(parameters('MCSModules').wsVmName,'/Installation')]",
            "location":"[parameters('MCSModules').location]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/', parameters('MCSModules').wsVmName)]",
                "domainJoin"
            ],
            "properties": {
                "publisher": "TrendMicro.DeepSecurity",
                "type": "TrendMicroDSA",
                "typeHandlerVersion": "9.6",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "DSMname": "[parameters('MCSModules').ManagerAddress]",
                    "DSMport": "[parameters('MCSModules').heartbeatPortTrendDSM]",
                    "policyNameorID": ""
                },
                "protectedSettings": {
                    "tenantID": "[parameters('MCSModules').TenantIdentifier]",
                    "tenantPassword": "[parameters('MCSModules').TenantActivationPassword]"
                }
            }
        }
    ]
}
